
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {void const* previousDstEnd; void const* dictEnd; char const* vBase; void const* base; } ;
typedef TYPE_1__ ZSTDv06_DCtx ;



__attribute__((used)) static void ZSTDv06_checkContinuity(ZSTDv06_DCtx* dctx, const void* dst)
{
    if (dst != dctx->previousDstEnd) {
        dctx->dictEnd = dctx->previousDstEnd;
        dctx->vBase = (const char*)dst - ((const char*)(dctx->previousDstEnd) - (const char*)(dctx->base));
        dctx->base = dst;
        dctx->previousDstEnd = dst;
    }
}
